<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Back Button -->
    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/backbacground"
        android:contentDescription="@string/back"
        android:elevation="8dp"
        android:src="@drawable/ic_arrow_back"
        app:tint="@color/background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- History Button -->
    <ImageButton
        android:id="@+id/btnSaveHistory"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/backbacground"
        android:contentDescription="@string/history"
        android:elevation="8dp"
        android:src="@drawable/ic_history"
        app:tint="@color/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- Center Title -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/age_calculator"
        android:textColor="@color/background"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="@font/righteous_regular"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@id/btnBack"
        app:layout_constraintEnd_toStartOf="@id/btnSaveHistory"
        app:layout_constraintTop_toTopOf="@id/btnBack"
        app:layout_constraintBottom_toBottomOf="@id/btnBack"
        android:layout_marginHorizontal="8dp"/>


    <!-- RecyclerView for cards -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAge"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:clipToPadding="false"
        android:paddingTop="16dp"

        android:background="@drawable/homebg"
        android:paddingBottom="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />


</androidx.constraintlayout.widget.ConstraintLayout>
