<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- ===== Top Toolbar ===== -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topToolbar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/btnSettings"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/backbacground"
            android:contentDescription="@string/settings"
            android:elevation="8dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_settings"
            app:tint="@color/background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age_calculator"
            android:textSize="18sp"
            android:fontFamily="@font/righteous_regular"
            android:textColor="@color/background"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageButton
            android:id="@+id/btnHistory"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:elevation="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/backbacground"
            android:src="@drawable/ic_history"
            app:tint="@color/background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- ===== Container for Name, Date, Buttons ===== -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:background="@drawable/homebg"
        android:padding="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topToolbar">

        <!-- Name EditText -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUserName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            app:boxStrokeColor="@android:color/transparent"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintEnabled="false"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:padding="12dp"
                android:hint="@string/enter_your_name"
                android:textStyle="bold"
                android:background="@color/white"
                android:fontFamily="@font/jaldi_regular"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Today Date EditText -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilTodayDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilUserName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTodayDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:clickable="true"
                android:cursorVisible="false"
                android:gravity="center"
                android:padding="12dp"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@android:color/black"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <!-- Buttons -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCalculateAge"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            app:cornerRadius="12dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/age_calculator"
            android:textColor="@color/background"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilTodayDate" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCompareAge"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            app:cornerRadius="12dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/poppins_bold"
            android:text="Comparison Age"
            android:textColor="@color/background"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnCalculateAge" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBirthdayWishes"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            app:cornerRadius="12dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/poppins_bold"
            android:text="Birthday Wishes"
            android:textColor="@color/background"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnCompareAge" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPlanetaryAge"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            app:cornerRadius="12dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/poppins_bold"
            android:text="Planetary Age"
            android:textColor="@color/background"
            android:textSize="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnBirthdayWishes" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
